Use Alexa colorscheme

--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary: #0066FF;
+            --primary: #00CAFF; /* Alexa blue */
             --bg: #f5f5f7;
             --text: #1d1d1f;
             --text-rgb: 29, 29, 31;
+            --accent: #31C4F3; /* Secondary Alexa color */
         }
 
         @media (prefers-color-scheme: dark) {
             :root {
-                --primary: #4991FF;
-                --bg: #1d1d1f;
+                --primary: #00CAFF;
+                --bg: #232F3E; /* Amazon dark blue */
                 --text: #f5f5f7;
                 --text-rgb: 245, 245, 247;
+                --accent: #31C4F3;
             }
         }
 
@@ -82,7 +84,7 @@
             border-radius: 30px;
             font-weight: 600;
             margin-bottom: 2rem;
-            box-shadow: 0 4px 12px rgba(0, 102, 255, 0.2);
+            box-shadow: 0 4px 12px rgba(0, 202, 255, 0.3);
         }
 
         .social-links {
@@ -129,11 +131,11 @@
     </style>
 </head>
 <body>
-    <h1>Remi Uzel</h1>
     <div class="logo">
         <img src="./images/logo.png" alt="Remi Uzel" class="logo-image">
     </div>
     <div class="badge animate-pulse">Under Construction</div>
+    <h1>Remi Uzel</h1>
     <p>I'm rebuilding my portfolio with modern tech. Check back soon for something awesome!</p>
     <div class="social-links">
         <a href="https://github.com/remuzel" target="_blank" aria-label="GitHub">
